--- a/index.html
+++ b/index.html
@@ -158,11 +158,15 @@ video{
 
     <h2>📖 How to Play Audio</h2>
 
-    <!-- Replace guide.mp4 with your actual video -->
-    <video controls>
-        <source src="guide.mp4" type="video/mp4">
-        Your browser does not support video.
-    </video>
+   <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;border-radius:14px;">
+        <iframe 
+            src="https://www.youtube.com/embed/Zo1e6GVwQUE"
+            style="position:absolute;top:0;left:0;width:100%;height:100%;"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+        </iframe>
+    </div>
 
     <ul class="steps">
         <li>1️⃣ Tap "Open Quran Folder"</li>
